--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,4 @@
 {
-  
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft.AspNetCore": "Warning"
-  //  }
-  //}, Server=tcp:unep-staff-p2005.database.windows.net,1433;Initial Catalog=p2005-db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,14 +8,12 @@
   "ConnectionStrings": {
     "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:unep-staff-p2005.database.windows.net,1433;Initial Catalog=p2005-db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
   },
-
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "yourdomain.onmicrosoft.com",
-    "TenantId": "your-tenant-id",
-    "ClientId": "your-client-id",
+    "Domain": "simonbunyagmail.onmicrosoft.com",
+    "TenantId": "1a819c91-6e1a-4524-bdf1-f1741423bcd8",
+    "ClientId": "79c6b341-f226-41f5-9f28-1844254e249a",
     "CallbackPath": "/signin-oidc"
   },
-
   "AllowedHosts": "*"
 }
